Bug 701263: Provide error/warning callback methods.

In order to override the default behaviour of printing to stdout, we
provide user callbacks for emitting error and warning messages.

The default implementation prints to stderr on all platforms.
On Windows, it also uses OutputDebugString in debug builds.
On Android, it also uses the Android logging mechanisms.