include/mupdf/fitz/context.h
@@ -37,14 +37,18 @@ struct fz_error_context_s
 	fz_error_stack_slot *top;
 	fz_error_stack_slot stack[256];
 	int errcode;
+	void *print_user;
+	void (*print)(void *user, const char *message);
 	char message[256];
 };
 
 typedef struct fz_warn_context_s fz_warn_context;
 struct fz_warn_context_s
 {
-	char message[256];
+	void *print_user;
+	void (*print)(void *user, const char *message);
 	int count;
+	char message[256];
 };
 
 typedef struct fz_aa_context_s fz_aa_context;
@@ -187,6 +191,12 @@ void fz_drop_context(fz_context *ctx);
 void fz_set_user_context(fz_context *ctx, void *user);
 
 void *fz_user_context(fz_context *ctx);
+
+void fz_default_error_callback(void *user, const char *message);
+void fz_default_warning_callback(void *user, const char *message);
+
+void fz_set_error_callback(fz_context *ctx, void (*print)(void *user, const char *message), void *user);
+void fz_set_warning_callback(fz_context *ctx, void (*print)(void *user, const char *message), void *user);
 
 /*
 	In order to tune MuPDF's behaviour, certain functions can
